--- a/index.html
+++ b/index.html
@@ -19,10 +19,18 @@
 <!-- Main -->
 <main>
 
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col hero-banner">
+
+            </div>
+        </div>
+    </div>
+
     <div class="container">
         <div class="row">
             <!-- Col Dés -->
-            <div class="col-12 col-md-6">
+            <div class="col-12 col-md-6 dice-part">
                 <!-- Dés -->
                 <div class="div-dice">
                     <div class="dice"><button class="diceButton" id="dice1"></button></div>
