--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </div>
 
     <div class="container">
-        <div class="row">
+        <div class="row py-5 py-md-0">
             <!-- Col Dés -->
             <div class="col-12 col-md-6 dice-part">
                 <!-- Dés -->
