--- a/index.html
+++ b/index.html
@@ -28,9 +28,12 @@
             <div class="row py-5 py-md-0">
                 <!-- Col Dés -->
                 <div class="col-12 col-md-6 dice-part">
-                    <p class="text-center d-none">Cliquez sur le dès que vous souhaitez bloquer, il vous reste encore 2 lancers.</p>
-                    <p class="text-center d-none">Cliquez sur le dès que vous souhaitez bloquer, il vous reste encore 1 lancer.</p>
-                    <p class="text-center d-none">Selectionner vos scores en cliquant sur la cellule concerné dans le tableau.</p>
+                    <div class="txt-info">
+                        <p class="text-center d-none">Cliquez sur les dés que vous souhaitez conserver,<br>Il vous reste 2 lancers.</p>
+                        <p class="text-center d-none">Cliquez sur les dés que vous souhaitez conserver,<br>Il vous reste 1 lancer.</p>
+                        <p class="text-center d-none">Selectionnez vos scores en cliquant sur la cellule concernée dans le tableau.</p>
+                    </div>
+                    
                     <!-- Dés -->
                     <div class="div-dice">  
                         <div class="dice"><button class="diceButton" id="dice-0"></button></div>
