--- a/index.html
+++ b/index.html
@@ -42,7 +42,13 @@
                     <!-- Bouton "Lancer les dés" -->
                     <div class="div-btn">
                         <button type="button" class="btn btn-dark btn-lg" id="throwDice">Lancer les dés</button>
-                    </div>
+                        <!-- ////////////////////////////   modal //////////////////////////////////////////// -->
+                        <div class="message-container">
+                            <div id="message">
+                                
+                            </div>
+                        </div>
+                        <!-- ///////////////////////////////// fin modal /////////////////////////////////////////////// -->
                 </div>
 
                 <!-- Col tableau de scores -->
