Push version ok pour présentation

--- a/index.html
+++ b/index.html
@@ -23,6 +23,15 @@
 
     <!-- Main -->
     <main>
+        <!-- Header -->
+        <nav class="navbar">
+            <div class="container">
+                <a class="navbar-brand" href="#">
+                    <img src="/public/assets/img/Logo.png" alt="Logo Jeu du Yams" width="200" height="100">
+                </a>
+                </div>
+            </nav>
+
 
         <div class="container">
             <div class="row py-5 py-md-0">
